--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-lottie-player": "^2.1.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.14.1",
